--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/img/style-images/harmonylogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://kit.fontawesome.com/5a39465714.js" crossorigin="anonymous"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
